--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<app-root class="g-main-container"></app-root>
+<app-root class="p-page"></app-root>
 </body>
 </html>
